--- a/GameExamle1.html
+++ b/GameExamle1.html
@@ -2,7 +2,7 @@
 <html lang="en"> 
 <head> 
     <meta charset="UTF-8" />
-    <title>Making your first Phaser 3 Game - Part 10</title>
+    <title>Game Example 1</title>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
     <style type="text/css">
         body {
@@ -45,11 +45,12 @@ var game = new Phaser.Game(config);
 
 function preload ()
 {
-    this.load.image('sky', 'assets/sky.png');
-    this.load.image('ground', 'assets/platform.png');
-    this.load.image('star', 'assets/star.png');
-    this.load.image('bomb', 'assets/bomb.png');
-    this.load.spritesheet('dude', 'assets/dude.png', { frameWidth: 32, frameHeight: 48 });
+    this.load.setBaseURL('assets/');
+    this.load.image('sky', 'ExamleGame1/sky.png');
+    this.load.image('ground', 'ExamleGame1/platform.png');
+    this.load.image('star', 'ExamleGame1/star.png');
+    this.load.image('bomb', 'ExamleGame1/bomb.png');
+    this.load.spritesheet('dude', 'ExamleGame1/dude.png', { frameWidth: 32, frameHeight: 48 });
 }
 
 function create ()
@@ -113,7 +114,7 @@ function create ()
         child.setBounceY(Phaser.Math.FloatBetween(0.4, 0.8));
 
     });
-
+	
     bombs = this.physics.add.group();
 
     //  The score
@@ -126,7 +127,6 @@ function create ()
 
     //  Checks to see if the player overlaps with any of the stars, if he does call the collectStar function
     this.physics.add.overlap(player, stars, collectStar, null, this);
-
     this.physics.add.collider(player, bombs, hitBomb, null, this);
 }
 
@@ -174,13 +174,10 @@ function collectStar (player, star)
     {
         //  A new batch of stars to collect
         stars.children.iterate(function (child) {
-
             child.enableBody(true, child.x, 0, true, true);
-
         });
 
         var x = (player.x < 400) ? Phaser.Math.Between(400, 800) : Phaser.Math.Between(0, 400);
-
         var bomb = bombs.create(x, 16, 'bomb');
         bomb.setBounce(1);
         bomb.setCollideWorldBounds(true);
@@ -193,11 +190,8 @@ function collectStar (player, star)
 function hitBomb (player, bomb)
 {
     this.physics.pause();
-
     player.setTint(0xff0000);
-
     player.anims.play('turn');
-
     gameOver = true;
 }
 </script>
