--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -2,8 +2,8 @@
 <html lang="en"> 
 <head> 
     <meta charset="UTF-8" />
-    <title>Game Example 1</title>
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
+    <title>Making your first Phaser 3 Game - Part 10</title>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
     <style type="text/css">
         body {
             margin: 0;
@@ -45,12 +45,11 @@ var game = new Phaser.Game(config);
 
 function preload ()
 {
-    this.load.setBaseURL('assets/');
-    this.load.image('sky', 'ExamleGame1/sky.png');
-    this.load.image('ground', 'ExamleGame1/platform.png');
-    this.load.image('star', 'ExamleGame1/star.png');
-    this.load.image('bomb', 'ExamleGame1/bomb.png');
-    this.load.spritesheet('dude', 'ExamleGame1/dude.png', { frameWidth: 32, frameHeight: 48 });
+    this.load.image('sky', 'assets/sky.png');
+    this.load.image('ground', 'assets/platform.png');
+    this.load.image('star', 'assets/star.png');
+    this.load.image('bomb', 'assets/bomb.png');
+    this.load.spritesheet('dude', 'assets/dude.png', { frameWidth: 32, frameHeight: 48 });
 }
 
 function create ()
@@ -104,8 +103,8 @@ function create ()
     //  Some stars to collect, 12 in total, evenly spaced 70 pixels apart along the x axis
     stars = this.physics.add.group({
         key: 'star',
-        repeat: 11,
-        setXY: { x: 12, y: 0, stepX: 70 }
+        repeat: 3,
+        setXY: { x: 12, y: 0, stepX: 200 }
     });
 
     stars.children.iterate(function (child) {
@@ -114,7 +113,7 @@ function create ()
         child.setBounceY(Phaser.Math.FloatBetween(0.4, 0.8));
 
     });
-	
+
     bombs = this.physics.add.group();
 
     //  The score
@@ -127,6 +126,7 @@ function create ()
 
     //  Checks to see if the player overlaps with any of the stars, if he does call the collectStar function
     this.physics.add.overlap(player, stars, collectStar, null, this);
+
     this.physics.add.collider(player, bombs, hitBomb, null, this);
 }
 
@@ -134,10 +134,7 @@ function update ()
 {
     if (gameOver)
     {
-        player.setVelocity(100, 450) ;
-        score = 0 ;
-        bombs.disableBody(true,true) ;
-        stars.disableBody(true,true) ;
+        return;
     }
 
     if (cursors.left.isDown)
@@ -177,7 +174,9 @@ function collectStar (player, star)
     {
         //  A new batch of stars to collect
         stars.children.iterate(function (child) {
+
             child.enableBody(true, child.x, 0, true, true);
+
         });
 
         var x = (player.x < 400) ? Phaser.Math.Between(400, 800) : Phaser.Math.Between(0, 400);
@@ -199,5 +198,6 @@ function hitBomb (player, bomb)
 }
 
 </script>
+
 </body>
 </html>
