--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -16,12 +16,11 @@
 
 var config = {
     type: Phaser.AUTO,
+    width: 800,
+    height: 600,
     scale: {
         mode: Phaser.Scale.FIT,
-        parent: 'phaser-example',
-        autoCenter: Phaser.Scale.CENTER_BOTH,
-        width: 800,
-        height: 600
+        autoCenter: Phaser.Scale.CENTER_BOTH
     },
     physics: {
         default: 'arcade',
