--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -50,8 +50,9 @@ var game = new Phaser.Game(config);
 function preload ()
 {
     this.load.setBaseURL('assets/');
-    this.load.image('sky', 'ExamleGame1/sky.png');
-    this.load.image('ground', 'ExamleGame1/platform.png');
+    this.load.image('background', 'ExamleGame1/background.png');
+    this.load.image('platform', 'ExamleGame1/platform.png');
+    this.load.image('ice-platform', 'ExamleGame1/ice-platform.png');
     this.load.image('star', 'ExamleGame1/star.png');
     this.load.image('bomb', 'ExamleGame1/bomb.png');
     this.load.spritesheet('dude', 'ExamleGame1/dude.png', { frameWidth: 32, frameHeight: 48 });
@@ -61,19 +62,19 @@ function preload ()
 function create ()
 {
     //  A simple background for our game
-    this.add.image(400, 300, 'sky');
+    this.add.image(400, 300, 'background');
 
     //  The platforms group contains the ground and the 2 ledges we can jump on
     platforms = this.physics.add.staticGroup();
 
     //  Here we create the ground.
     //  Scale it to fit the width of the game (the original sprite is 400x32 in size)
-    platforms.create(400, 568, 'ground').setScale(2).refreshBody();
+    platforms.create(400, 568, 'platform').setScale(2).refreshBody();
 
     //  Now let's create some ledges
-    platforms.create(600, 400, 'ground');
-    platforms.create(50, 250, 'ground');
-    platforms.create(750, 220, 'ground');
+    platforms.create(600, 400, 'platform');
+    platforms.create(50, 250, 'ice-platform');
+    platforms.create(750, 220, 'platform');
 
     // The player and its settings
     player = this.physics.add.sprite(100, 450, 'dude');
