--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -53,6 +53,7 @@ function preload ()
     this.load.image('background', 'ExamleGame1/background.png');
     this.load.image('platform', 'ExamleGame1/platform.png');
     this.load.image('ice-platform', 'ExamleGame1/ice-platform.png');
+    this.load.image('ground', 'ExamleGame1/ground.png');
     this.load.image('star', 'ExamleGame1/star.png');
     this.load.image('bomb', 'ExamleGame1/bomb.png');
     this.load.spritesheet('dude', 'ExamleGame1/dude.png', { frameWidth: 32, frameHeight: 48 });
@@ -67,11 +68,7 @@ function create ()
     //  The platforms group contains the ground and the 2 ledges we can jump on
     platforms = this.physics.add.staticGroup();
 
-    //  Here we create the ground.
-    //  Scale it to fit the width of the game (the original sprite is 400x32 in size)
-    platforms.create(400, 568, 'platform').setScale(2).refreshBody();
-
-    //  Now let's create some ledges
+    platforms.create(400, 568, 'ground');
     platforms.create(600, 400, 'platform');
     platforms.create(50, 250, 'ice-platform');
     platforms.create(750, 220, 'platform');
