--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -62,17 +62,23 @@ function preload ()
 
 function create ()
 {
+    game.physics.startSystem(Phaser.Physics.ARCADE);
     //  A simple background for our game
     this.add.image(400, 300, 'background');
 
     //  The platforms group contains the ground and the 2 ledges we can jump on
     platforms = this.physics.add.staticGroup();
-
-    platforms.create(400, 568, 'ground');
-    platforms.create(600, 400, 'platform');
-    platforms.create(50, 250, 'ice-platform');
+    platforms.enableBody = true ;
+    //指派給變數 platorm 的目的在於下一行需要設定該平台的物體特性 (摩擦力)
+    var platform = platforms.create(400, 568, 'ground');
+    platform.body.friction.x = 1 ;
+    platform = platforms.create(600, 400, 'platform');
+    platform.body.friction.x = 1 ;
+    platform = platforms.create(350, 250, 'ice-platform');
+    platform.body.friction.x = 0 ;
     platforms.create(750, 220, 'platform');
 
+    this.platforms.setAll('body.immovable', true) ;
     // The player and its settings
     player = this.physics.add.sprite(100, 450, 'dude');
 
