--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -3,7 +3,7 @@
 <head> 
     <meta charset="UTF-8" />
     <title>Game Example 1</title>   
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.19.0/dist/phaser-arcade-physics.min.js"></script>
+    <script src="js/phaser@3.19.0/phaser-arcade-physics.min.js"></script>
     <style type="text/css">
         body {
             margin: 0;
