--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -66,27 +66,118 @@ function create ()
     this.add.image(400, 300, 'background');
 
     //  The platforms group contains the ground and the 2 ledges we can jump on
-    ground = this.physics.add.staticGroup();
-    ground.create(400, 568, 'ground');
-    platforms = this.physics.add.group({
-        key: 'platform',
-        frameQuantity: 2,
-        setXY: { x: 600, y: 400, strpX: 150 , stepY: -200 },
-        immovable: true
+    platforms = this.physics.add.staticGroup();
+    platforms.enableBody = true ;
+    //指派給變數 platorm 的目的在於下一行需要設定該平台的物體特性 (摩擦力)
+    platforms.create(400, 568, 'ground');
+    platforms.create(600, 400, 'platform');
+    platforms.create(350, 250, 'ice-platform');
+    platforms.create(750, 220, 'platform');
+    // The player and its settings
+    player = this.physics.add.sprite(100, 450, 'dude');
+
+    //  Player physics properties. Give the little guy a slight bounce.
+    player.setBounce(0);
+    player.setCollideWorldBounds(true);
+
+    //  Our player animations, turning, walking left and walking right.
+    this.anims.create({
+        key: 'left',
+        frames: this.anims.generateFrameNumbers('dude', { start: 0, end: 3 }),
+        frameRate: 10,
+        repeat: -1
     });
-    ice_platforms = this.physics.add.group({
-        key: 'ice-platform',
-        frameQuantity: 1,
-        setXY: { x: 350, y: 250},
-        immovable: true,
-        setFrictionX: 0 
+
+    this.anims.create({
+        key: 'turn',
+        frames: [ { key: 'dude', frame: 4 } ],
+        frameRate: 20
     });
-    
+
+    this.anims.create({
+        key: 'right',
+        frames: this.anims.generateFrameNumbers('dude', { start: 5, end: 8 }),
+        frameRate: 10,
+        repeat: -1
+    });
+
+    //  Input Events
+    cursors = this.input.keyboard.createCursorKeys();
+
+    //  Some stars to collect, 12 in total, evenly spaced 70 pixels apart along the x axis
+    stars = this.physics.add.group({
+        key: 'star',
+        repeat: 4,
+        setXY: { x: 12, y: 0, stepX: 160 }
+    });
+
+    stars.children.iterate(function (child) {
+
+        //  Give each star a slightly different bounce
+        child.setBounceY(Phaser.Math.FloatBetween(0.4, 0.8));
+
+    });
+
+    bombs = this.physics.add.group();
+
+    //  The score
+    scoreText = this.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
+
+    //  Collide the player and the stars with the platforms
+    this.physics.add.collider(player, platforms);
+    this.physics.add.collider(stars, platforms);
+    this.physics.add.collider(bombs, platforms);
+
+    //  Checks to see if the player overlaps with any of the stars, if he does call the collectStar function
+    this.physics.add.overlap(player, stars, collectStar, null, this);
+
+    this.physics.add.collider(player, bombs, hitBomb, null, this);
+
+    var button = this.add.image(800-16, 16, 'fullscreen', 0).setOrigin(1, 0).setInteractive();
+    button.on('pointerup', function () {
+        if (this.scale.isFullscreen)
+        {
+            button.setFrame(0);
+            this.scale.stopFullscreen();
+        }
+        else
+        {
+            button.setFrame(1);
+            this.scale.startFullscreen();
+        }
+    }, this);
 }
 
 function update ()
 {
-   
+    if (gameOver)
+    {
+        game.state.restart() ;
+    }
+
+    if (cursors.left.isDown)
+    {
+        player.setVelocityX(-160);
+
+        player.anims.play('left', true);
+    }
+    else if (cursors.right.isDown)
+    {
+        player.setVelocityX(160);
+
+        player.anims.play('right', true);
+    }
+    else
+    {
+        player.setVelocityX(0);
+
+        player.anims.play('turn');
+    }
+
+    if (cursors.up.isDown && player.body.touching.down)
+    {
+        player.setVelocityY(-330);
+    }
 }
 
 function collectStar (player, star)
