--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -151,8 +151,8 @@ function create ()
 function update ()
 {
     if (gameOver)
-    {
-        game.state.restart() ;
+    {   
+        return ;
     }
 
     if (cursors.left.isDown)
