--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -201,11 +201,7 @@ var config = {
             debug: false
         }
     },
-    scene: {
-        preload: preload,
-        create: create,
-        update: update
-    }
+    scene: [mainScene]
 };
 
 var game = new Phaser.Game(config);
