--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -129,21 +129,22 @@ var mainScene = new Phaser.Class({
             }
         }, this);
 
-        playText = this.add.text(350, 300, '重新開始', {
+        playText = this.add.text(350, 300, 'Game Over', {
             fontSize: '24px',
             fill: '#000'
         })
-        playText.setInteractive().on('pointerdown', function () {
-            this.scene.restart() ;        
-            score = 0 ;
-            gameOver = false  ;
-        })
+
         
         playText.visible = false
         this.input.once('pointerdown', function (event) {
-            this.scene.restart();
+            if ( gameover = true )
+            {
+                this.scene.restart();
+                score = 0 ;
+                gameOver = false  ;
+            }
         }, this);
-        
+
     }, // create
     update:function ()
     {
