--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -137,7 +137,7 @@ var mainScene = new Phaser.Class({
         
         playText.visible = false
         this.input.once('pointerdown', function (event) {
-            if ( gameover = true )
+            if ( gameOver == true )
             {
                 this.scene.restart();
                 score = 0 ;
