--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -150,7 +150,7 @@ var mainScene = new Phaser.Class({
     {
         if (gameOver)
         {   
-            playText.visible = true
+            playText.visible = true ;
             return;
         }
 
