--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -248,7 +248,7 @@ function hitBomb (player, bomb)
     gameOver = true;
 } // hitBomb (player, bomb)
 
-buildMobileControls() {
+function buildMobileControls() {
 	// Found this helps with multiple buttons being pressed at the same time on mobile
 	this.input.addPointer(2)
 
