--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -87,8 +87,42 @@ var mainScene = new Phaser.Class({
         if (!this.sys.game.device.input.touch) {
             cursors = this.input.keyboard.createCursorKeys()
         } else {
-            cursors = this.input.keyboard.createCursorKeys()
+            //cursors = this.input.keyboard.createCursorKeys()
             // 要加上虛擬鍵盤(未開發)
+            this.input.addPointer(2) ;
+            this.input.topOnly = true
+            this.cursors = {
+                'up': {},
+                'left': {},
+                'right': {},
+                'down': {},
+            }
+            const pointerDown = key => {
+                // modifies this.cursors with the property that we check in update() method
+                this.cursors[key].isDown = true
+            }
+            const pointerUp = key => {
+                this.cursors[key].isDown = false
+            }
+            const WIDTH = 167
+	        const HEIGHT = 153
+            const GUTTER = 12
+            const createBtn = (key, x, y, width=WIDTH, height=HEIGHT) => {
+                // Add a faded out red rectangle for our button
+                this.add.rectangle(x, y, width, height, 0xff0000, 0.07)
+                    .setOrigin(0,0)
+                    .setScrollFactor(0)
+                    .setInteractive()
+                    .on('pointerdown', () => pointerDown(key))
+                    .on('pointerup', () => pointerUp(key))
+            }
+            const BTN_Y = 600 - HEIGHT - GUTTER
+
+            // create player control buttons
+            createBtn('left', GUTTER, BTN_Y)
+            createBtn('right', WIDTH + 2*GUTTER, BTN_Y)
+            createBtn('up', 800 - 2*(WIDTH + GUTTER), BTN_Y)
+            createBtn('down', 800 - WIDTH - GUTTER, BTN_Y)
         }
 
         //  Some stars to collect, 12 in total, evenly spaced 70 pixels apart along the x axis
