--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -190,30 +190,35 @@ var mainScene = new Phaser.Class({
         {   
             playText.visible = true ;
         }
-
-        if (cursors.left.isDown)
+        if ( !this.sys.game.device.input.touch ) 
         {
-            player.setVelocityX(-160);
+                if (cursors.left.isDown)
+            {
+                player.setVelocityX(-160);
+                player.anims.play('left', true);
+            }
+            else if (cursors.right.isDown)
+            {
+                player.setVelocityX(160);
+                player.anims.play('right', true);
+            }
+            else
+            {
+                player.setVelocityX(0);
+                player.anims.play('turn');
+            }
 
-            player.anims.play('left', true);
+            if (cursors.up.isDown && player.body.touching.down)
+            {
+                player.setVelocityY(-330);
+            }
+        } else {
+            if ( this.cursors[left].isDown ) {
+                player.setVelocityX(-160);
+                player.anims.play('left', true);
+            }
         }
-        else if (cursors.right.isDown)
-        {
-            player.setVelocityX(160);
-
-            player.anims.play('right', true);
-        }
-        else
-        {
-            player.setVelocityX(0);
-
-            player.anims.play('turn');
-        }
-
-        if (cursors.up.isDown && player.body.touching.down)
-        {
-            player.setVelocityY(-330);
-        }
+        
 
         bombs.children.iterate(bomb => {
             const v = 100;
