--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -212,7 +212,28 @@ var mainScene = new Phaser.Class({
             {
                 player.setVelocityY(-330);
             }
-        }         
+        } else {
+            if (this.cursors[0].isDown)
+            {
+                player.setVelocityX(-160);
+                player.anims.play('left', true);
+            }
+            else if (this.cursors[1].isDown)
+            {
+                player.setVelocityX(160);
+                player.anims.play('right', true);
+            }
+            else
+            {
+                player.setVelocityX(0);
+                player.anims.play('turn');
+            }
+
+            if (this.cursors[2].isDown && player.body.touching.down)
+            {
+                player.setVelocityY(-330);
+            }
+        } 
 
         bombs.children.iterate(bomb => {
             const v = 100;
