--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -87,42 +87,8 @@ var mainScene = new Phaser.Class({
         if (!this.sys.game.device.input.touch) {
             cursors = this.input.keyboard.createCursorKeys()
         } else {
-            //cursors = this.input.keyboard.createCursorKeys()
+            cursors = this.input.keyboard.createCursorKeys()
             // 要加上虛擬鍵盤(未開發)
-            this.input.addPointer(2) ;
-            this.input.topOnly = true
-            this.cursors = {
-                'up': {},
-                'left': {},
-                'right': {},
-                'down': {},
-            }
-            const pointerDown = key => {
-                // modifies this.cursors with the property that we check in update() method
-                this.cursors[key].isDown = true
-            }
-            const pointerUp = key => {
-                this.cursors[key].isDown = false
-            }
-            const WIDTH = 167
-	        const HEIGHT = 153
-            const GUTTER = 12
-            const createBtn = (key, x, y, width=WIDTH, height=HEIGHT) => {
-                // Add a faded out red rectangle for our button
-                this.add.rectangle(x, y, width, height, 0xff0000, 0.07)
-                    .setOrigin(0,0)
-                    .setScrollFactor(0)
-                    .setInteractive()
-                    .on('pointerdown', () => pointerDown(key))
-                    .on('pointerup', () => pointerUp(key))
-            }
-            const BTN_Y = 600 - HEIGHT - GUTTER
-
-            // create player control buttons
-            createBtn('left', GUTTER, BTN_Y)
-            createBtn('right', WIDTH + 2*GUTTER, BTN_Y)
-            createBtn('up', 800 - 2*(WIDTH + GUTTER), BTN_Y)
-            createBtn('down', 800 - WIDTH - GUTTER, BTN_Y)
         }
 
         //  Some stars to collect, 12 in total, evenly spaced 70 pixels apart along the x axis
@@ -190,50 +156,27 @@ var mainScene = new Phaser.Class({
         {   
             playText.visible = true ;
         }
-        if ( !this.sys.game.device.input.touch ) 
+
+        if (cursors.left.isDown)
         {
-                if (cursors.left.isDown)
-            {
-                player.setVelocityX(-160);
-                player.anims.play('left', true);
-            }
-            else if (cursors.right.isDown)
-            {
-                player.setVelocityX(160);
-                player.anims.play('right', true);
-            }
-            else
-            {
-                player.setVelocityX(0);
-                player.anims.play('turn');
-            }
+            player.setVelocityX(-160);
+            player.anims.play('left', true);
+        }
+        else if (cursors.right.isDown)
+        {
+            player.setVelocityX(160);
+            player.anims.play('right', true);
+        }
+        else
+        {
+            player.setVelocityX(0);
+            player.anims.play('turn');
+        }
 
-            if (cursors.up.isDown && player.body.touching.down)
-            {
-                player.setVelocityY(-330);
-            }
-        } else {
-            if (this.cursors[0].isDown)
-            {
-                player.setVelocityX(-160);
-                player.anims.play('left', true);
-            }
-            else if (this.cursors[1].isDown)
-            {
-                player.setVelocityX(160);
-                player.anims.play('right', true);
-            }
-            else
-            {
-                player.setVelocityX(0);
-                player.anims.play('turn');
-            }
-
-            if (this.cursors[2].isDown && player.body.touching.down)
-            {
-                player.setVelocityY(-330);
-            }
-        } 
+        if (cursors.up.isDown && player.body.touching.down)
+        {
+            player.setVelocityY(-330);
+        }
 
         bombs.children.iterate(bomb => {
             const v = 100;
