--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -89,6 +89,34 @@ var mainScene = new Phaser.Class({
         } else {
             cursors = this.input.keyboard.createCursorKeys()
             // 要加上虛擬鍵盤(未開發)
+            // keyboard listeners to be user for each key
+            this.input.addPointer(2);            
+            const WIDTH = 167
+            const HEIGHT = 153
+            // gutter width between buttons
+            const GUTTER = 12
+
+            // Create a button helper
+            const createBtn = (key, x, y, width=WIDTH, height=HEIGHT) => {
+                // Add a faded out red rectangle for our button
+                this.add.rectangle(x, y, width, height, 0xff0000, 0.07)
+                    .setOrigin(0,0)
+                    .setScrollFactor(0)
+                    .setInteractive()
+            }
+            
+            // Y coordinate to place buttons
+            const BTN_Y = GAME_H600EIGHT - HEIGHT - GUTTER
+
+            // create player control buttons
+            createBtn('left', GUTTER, BTN_Y)
+            createBtn('right', WIDTH + 2*GUTTER, BTN_Y)
+            createBtn('up', 800 - 2*(WIDTH + GUTTER), BTN_Y)
+            createBtn('down', 800 - WIDTH - GUTTER, BTN_Y)
+            this.input.on('left', function (pointer, gameObject) {
+                player.setVelocityX(-160);
+                player.anims.play('left', true);
+            });
         }
 
         //  Some stars to collect, 12 in total, evenly spaced 70 pixels apart along the x axis
