--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -106,7 +106,7 @@ var mainScene = new Phaser.Class({
             }
             
             // Y coordinate to place buttons
-            const BTN_Y = GAME_H600EIGHT - HEIGHT - GUTTER
+            const BTN_Y = 600 - HEIGHT - GUTTER
 
             // create player control buttons
             createBtn('left', GUTTER, BTN_Y)
