--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -90,11 +90,18 @@ var mainScene = new Phaser.Class({
             cursors = this.input.keyboard.createCursorKeys()
             // 要加上虛擬鍵盤(未開發)
             // keyboard listeners to be user for each key
-            this.input.addPointer(2);            
-            const WIDTH = 167
-            const HEIGHT = 153
+            this.input.addPointer(2);  
+            this.input.topOnly = true; 
+            const pointerDown = key => {
+                this.cursors[key].isDown = true
+            }
+            const pointerUp = key => {
+                this.cursors[key].isDown = false
+            }
+            const WIDTH = 167;
+            const HEIGHT = 153;
             // gutter width between buttons
-            const GUTTER = 12
+            const GUTTER = 12;
 
             // Create a button helper
             const createBtn = (key, x, y, width=WIDTH, height=HEIGHT) => {
@@ -103,20 +110,18 @@ var mainScene = new Phaser.Class({
                     .setOrigin(0,0)
                     .setScrollFactor(0)
                     .setInteractive()
+                    .on('pointerdown', () => pointerDown(key))
+			        .on('pointerup', () => pointerUp(key))
             }
             
             // Y coordinate to place buttons
-            const BTN_Y = 600 - HEIGHT - GUTTER
+            const BTN_Y = 600 - HEIGHT - GUTTER;
 
             // create player control buttons
-            createBtn('left', GUTTER, BTN_Y)
-            createBtn('right', WIDTH + 2*GUTTER, BTN_Y)
-            createBtn('up', 800 - 2*(WIDTH + GUTTER), BTN_Y)
-            createBtn('down', 800 - WIDTH - GUTTER, BTN_Y)
-            this.input.on('left', function (pointer, gameObject) {
-                player.setVelocityX(-160);
-                player.anims.play('left', true);
-            });
+            createBtn('left', GUTTER, BTN_Y);
+            createBtn('right', WIDTH + 2*GUTTER, BTN_Y);
+            createBtn('up', 800 - 2*(WIDTH + GUTTER), BTN_Y);
+            createBtn('down', 800 - WIDTH - GUTTER, BTN_Y);
         }
 
         //  Some stars to collect, 12 in total, evenly spaced 70 pixels apart along the x axis
