--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -93,10 +93,12 @@ var mainScene = new Phaser.Class({
             this.input.addPointer(2);  
             this.input.topOnly = true; 
             const pointerDown = key => {
-                this.cursors.key.isDown = true ;
+                if ( key == 'left')
+                    this.cursors.left.isDown = true ;
             }
             const pointerUp = key => {
-                this.cursors.key.isDown = false ;
+                if ( key == 'left')
+                    this.cursors.left.isDown = false ;
             }
             const WIDTH = 167;
             const HEIGHT = 153;
