--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -40,6 +40,10 @@ var mainScene = new Phaser.Class({
         this.load.image('ground', 'ExamleGame1/ground.png');
         this.load.image('star', 'ExamleGame1/star.png');
         this.load.image('bomb', 'ExamleGame1/bomb.png');
+        this.load.image('arrow-down', 'UI/arrow-down.png');
+        this.load.image('arrow-left', 'UI/arrow-left.png');
+        this.load.image('arrow-right', 'UI/arrow-right.png');
+        this.load.image('arrow-down', 'UI/arrow-down.png');
         this.load.spritesheet('dude', 'ExamleGame1/dude.png', { frameWidth: 32, frameHeight: 48 });
         this.load.spritesheet('fullscreen', 'UI/fullscreen.png', { frameWidth: 64, frameHeight: 64 });
     }, // preload
@@ -114,15 +118,25 @@ var mainScene = new Phaser.Class({
                     .on('pointerdown', () => pointerDown(key))
 			        .on('pointerup', () => pointerUp(key))
             }
+			
+			const createBtn = (key, x, y, img) => {
+                // Add a faded out red rectangle for our button
+				this.add.image(x, y, img)
+					.setOrigin(0,0)
+                    .setScrollFactor(0)
+                    .setInteractive()
+                    .on('pointerdown', () => pointerDown(key))
+			        .on('pointerup', () => pointerUp(key))
+            }
             
             // Y coordinate to place buttons
             const BTN_Y = 600 - HEIGHT - GUTTER;
 
             // create player control buttons
-            createBtn('left', GUTTER, BTN_Y);
-            createBtn('right', WIDTH + 2*GUTTER, BTN_Y);
-            createBtn('up', 800 - 2*(WIDTH + GUTTER), BTN_Y);
-            createBtn('down', 800 - WIDTH - GUTTER, BTN_Y);
+            createBtn('left', GUTTER, BTN_Y,'arrow-left');
+            createBtn('right', WIDTH + 2*GUTTER, 'arrow-right');
+            createBtn('up', 800 - 2*(WIDTH + GUTTER), 'arrow-up');
+            createBtn('down', 800 - WIDTH - GUTTER, BTN_Y, 'arrow-down');
         }
 
         //  Some stars to collect, 12 in total, evenly spaced 70 pixels apart along the x axis
