--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -40,7 +40,7 @@ var mainScene = new Phaser.Class({
         this.load.image('ground', 'ExamleGame1/ground.png');
         this.load.image('star', 'ExamleGame1/star.png');
         this.load.image('bomb', 'ExamleGame1/bomb.png');
-        this.load.image('arrow-top', 'UI/arrow-top.png');
+        this.load.image('arrow-up', 'UI/arrow-up.png');
         this.load.image('arrow-left', 'UI/arrow-left.png');
         this.load.image('arrow-right', 'UI/arrow-right.png');
         this.load.image('arrow-down', 'UI/arrow-down.png');
@@ -122,7 +122,7 @@ var mainScene = new Phaser.Class({
             // create player control buttons
             createBtn('left', GUTTER, BTN_Y,'arrow-left');
             createBtn('right', WIDTH + 2*GUTTER, BTN_Y, 'arrow-right');
-            createBtn('up', 800 - 2*(WIDTH + GUTTER), BTN_Y, 'arrow-top');
+            createBtn('up', 800 - 2*(WIDTH + GUTTER), BTN_Y, 'arrow-up');
             createBtn('down', 800 - WIDTH - GUTTER, BTN_Y, 'arrow-down');
         }
 
