--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -92,7 +92,6 @@ var mainScene = new Phaser.Class({
             cursors = this.input.keyboard.createCursorKeys()
         } else {
             cursors = this.input.keyboard.createCursorKeys()
-            // 要加上虛擬鍵盤(未開發)
             // keyboard listeners to be user for each key
             this.input.addPointer(2);  
             this.input.topOnly = true; 
@@ -122,8 +121,8 @@ var mainScene = new Phaser.Class({
             // create player control buttons
             createBtn('left', GUTTER, BTN_Y,'arrow-left');
             createBtn('right', WIDTH + 2*GUTTER, BTN_Y, 'arrow-right');
-            createBtn('up', 800 - 2*(WIDTH + GUTTER), BTN_Y, 'arrow-up');
-            createBtn('down', 800 - WIDTH - GUTTER, BTN_Y, 'arrow-down');
+            createBtn('up', 800 - 2*(WIDTH) - GUTTER, BTN_Y, 'arrow-up');
+            createBtn('down', 800 - WIDTH, BTN_Y, 'arrow-down');
         }
 
         //  Some stars to collect, 12 in total, evenly spaced 70 pixels apart along the x axis
