--- a/ExampleGame1.html
+++ b/ExampleGame1.html
@@ -195,14 +195,10 @@ var mainScene = new Phaser.Class({
         {
             player.setVelocityX(-160);
             player.anims.play('left', true);
-        }
-        else if (cursors.right.isDown)
-        {
+        } else if (cursors.right.isDown) {
             player.setVelocityX(160);
             player.anims.play('right', true);
-        }
-        else
-        {
+        } else {
             player.setVelocityX(0);
             player.anims.play('turn');
         }
@@ -212,7 +208,7 @@ var mainScene = new Phaser.Class({
             player.setVelocityY(-330);
         }
 
-        bombs.children.iterate(bomb => {
+        bombs.children.iterate( bomb => {
             const v = 100;
             const distanceX = player.x - bomb.x;
             const distanceY = player.y - bomb.y;
@@ -247,7 +243,6 @@ var game = new Phaser.Game(config);
 function collectStar (player, star)
 {
     star.disableBody(true, true);
-
     //  Add and update the score
     score += 10;
     scoreText.setText('Score: ' + score);
@@ -256,9 +251,7 @@ function collectStar (player, star)
     {
         //  A new batch of stars to collect
         stars.children.iterate(function (child) {
-
             child.enableBody(true, child.x, 0, true, true);
-
         });
 
         var x = (player.x < 400) ? Phaser.Math.Between(400, 800) : Phaser.Math.Between(0, 400);
@@ -267,7 +260,6 @@ function collectStar (player, star)
         bomb.setCollideWorldBounds(true);
         bomb.setVelocity(Phaser.Math.Between(-200, 200), 20);
         bomb.allowGravity = false;
-
     } // if()
 } // collectStar (player, star)
 
