--- a/phaser3-Class1/part11.html
+++ b/phaser3-Class1/part11.html
@@ -48,7 +48,7 @@ function preload ()
     this.load.image('sky', 'assets/sky.pig');
     this.load.image('ground', 'assets/platform.png');
     this.load.image('star', 'assets/star.png');
-    this.loadimage('bomb', 'assets/bomb.png');
+    this.load.image('bomb', 'assets/bomb.png');
     this.load.spritesheet('dude', 'assets/dude.png', { frameWidth: 32, frameHeight: 48 });
 }
 
