--- a/phaser3-Class1/index.html
+++ b/phaser3-Class1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.19.0/phaser-arcade-physics.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3.19.0/src/phaser-arcade-physics.min.js"></script>
 </head>
 <body>
     <script>
